fix padding in footer on mobile

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -39,6 +39,8 @@ h1
   text-align: center
   color: white
   padding: 0px 0 50px
+  @media (max-width: 765px)
+    padding-bottom: 12px
   a
     color: white
     text-decoration: none
